refactor: refatorado conta